public/assets/css/main.css
/* ... */
h5 {
	font-size: 14px;
	color: #2d3033;
	text-transform: uppercase;
	font-weight: 700;
}
.btn {
	background-color: #2b99e4;
	color: #ffffff;
	font-size: 14px;
	font-weight: 400;
	border: 0;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	display: inline-block;
	text-transform: uppercase;
	border: 1px solid #ffffff;
	margin-top: 20px;
}
.btn:hover, .btn:focus {
	background-color: #d06638;
	color: #fff;
}
.btn-large {
	padding: 15px 40px;
	border: none;
	border: 1px solid #fff;
	background: transparent;
}
#map-overlay {
    height:400px;
    margin-top:-405px;
    background-color: #070C29;
    padding:40px;
    color: #D1B23E;
}
/* ------------------------------------------------------------------------------
	Global Styles
-------------------------------------------------------------------------------*/
a {
	color: #e84545;
}
a:hover, a:focus {
	text-decoration: none;
	-moz-transition: background-color, color, 0.3s;
	-o-transition: background-color, color, 0.3s;
	-webkit-transition: background-color, color, 0.3s;
	transition: background-color, color, 0.3s;
}
body {
	font-family: "Open Sans", Arial, sans-serif;
	font-weight: 400;
	color: #6c7279;
	background: #f5f5f5;
}
ul, ol {
	margin: 0;
	padding: 0;
}
ul li {
	list-style: none;
}
.section {
	padding: 100px 0;
}
.no-padding {
	padding: 0;
}
.no-gutter [class*=col-] {
	padding-right: 0;
	padding-left: 0;
}
.space {
	margin-top: 60px;
}
/* ------------------------------------------------------------------------------
	Header
-------------------------------------------------------------------------------*/
#header {
	position: fixed;
	width: 100%;
	height: 15%;
	z-index: 999;
	background: rgb(2, 17, 68, 0.5);
	/* border-bottom: 2px solid #a7a7a7; */
}
#header .header-content {
	margin: 0 auto;
	margin-top: 9px;
	max-width: 1170px;
	padding: 40px 0;
	width: 100%;
	-moz-transition: padding 0.3s;
	-o-transition: padding 0.3s;
	-webkit-transition: padding 0.3s;
	transition: padding 0.3s;
	position: relative;
}
#header .logo {
	float: left;
	font-size:24px;
	font-weight:700;
	color: #000;
	text-decoration:none;
	text-transform:uppercase;
	letter-spacing: 2px;
	/* background: #ffffff; */
	position: absolute;
	top: 0px;
	bottom: 0px;
	text-align: center;
	padding: 6px 15px;
	vertical-align: bottom;
}

#header .account {
	float: right;
	font-size:13px;
	color: #000;
	text-decoration:none;
	text-transform:uppercase;
	letter-spacing: 2px;
	/* background: #ffffff; */
	position: absolute;
	top: 36px;
	bottom: 35px;
	right: 125px;
	text-align: center;
	padding: 6px 15px;
	vertical-align: bottom;
}
#header .loginB a{
	padding-top: 0%;
	display: inherit;
	color: #D1B23E;
	/* background: #ffffff; */
	/* border: 2px solid #82c434; */
	/* padding: 34px; */
	border-top: 0;
}
#header .logo a{
	padding-top: 0%;
	display: inherit;
	color: #D1B23E;
	/* background: #ffffff; */
	/* border: 2px solid #82c434; */
	/* padding: 34px; */
	border-top: 0;
}
#header .logo a span{
	color: #ffffff;
}
#header.fixed .header-content .logo a{
	padding-top: 14%;
	color: #D1B23E;
	text-align: center;
	/* padding-bottom: 28px; */
}
#header .logo a:hover{
	
}
#header.fixed {
	background-color: #020d31;
}
#header.fixed a {
	color: #8d8d8d;
}
#header.fixed .header-content {
	border-bottom: 0;
	padding: 40px 0;
}
#header.fixed .nav-toggle {
	top: 5px;
	color: #000;
}
.navigation.open {
	opacity: 0.9;
	visibility: visible;
	-moz-transition: opacity 0.5s;
	-o-transition: opacity 0.5s;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
}
.navigation {
	float: center;
	margin-left: 250px;
}
.navigation li {
	display: inline-block;
}
.navigation a {
	color: #747474;
	font-size: 14px;
	font-weight: 400;
	margin-left: 28px;
	text-transform: uppercase;
}
.navigation a:hover, .navigation a.active {
	color: #9b832c !important;
}
.nav-toggle {
	display: none;
	height: 44px;
	overflow: hidden;
	position: fixed;
	right: 5%;
	text-indent: 100%;
	top: 18px;
	white-space: nowrap;
	width: 44px;
	z-index: 99999;
	-moz-transition: all 0.3s;
	-o-transition: all 0.3s;
	-webkit-transition: all 0.3s;
	transition: all 0.3s;
	background: rgba(174, 174, 174, 0.44);
}
.nav-toggle:before, .nav-toggle:after {
	border-radius: 50%;
	content: "";
	height: 100%;
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
	-moz-transform: translateZ(0);
	-ms-transform: translateZ(0);
	-webkit-transform: translateZ(0);
	transform: translateZ(0);
	-moz-backface-visibility: hidden;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	-moz-transition-property: -moz-transform;
	-o-transition-property: -o-transform;
	-webkit-transition-property: -webkit-transform;
	transition-property: transform;
}
.nav-toggle:before {
	-moz-transform: scale(1);
	-ms-transform: scale(1);
	-webkit-transform: scale(1);
	transform: scale(1);
	-moz-transition-duration: 0.3s;
	-o-transition-duration: 0.3s;
	-webkit-transition-duration: 0.3s;
	transition-duration: 0.3s;
	color: #f05da3;
}
.nav-toggle:after {
	background-color: transparent;
	-moz-transform: scale(0);
	-ms-transform: scale(0);
	-webkit-transform: scale(0);
	transform: scale(0);
	-moz-transition-duration: 0s;
	-o-transition-duration: 0s;
	-webkit-transition-duration: 0s;
	transition-duration: 0s;
	color: #f05da3;
}
.nav-toggle span {
	bottom: auto;
	display: inline-block;
	height: 3px;
	left: 50%;
	position: absolute;
	right: auto;
	top: 50%;
	width: 18px;
	z-index: 10;
	-moz-transform: translateX(-50%) translateY(-50%);
	-ms-transform: translateX(-50%) translateY(-50%);
	-webkit-transform: translateX(-50%) translateY(-50%);
	transform: translateX(-50%) translateY(-50%);
	color: #fff;
}
/* ... */

